# filesage-be

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: api.py
app/endpoints/: content_extractor_endpoint.py  endpoints.py  scanner_endpoints.py
app/model/: constant.py  request.py  scanner.py
app/utils/: chunker.py  content_extractor.py  embedding.py  scanner.py
